Добавление описания (README.md)
